<resources>
    <string name="nissi_attendance">NISSI Attendance</string>
    <string name="nissi_connect">NISSI CONNECT Beta</string>
    <string name="app_name">NISSI</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="employee_name">Employee Name</string>
    <string name="employee_id">Employee Id</string>
    <string name="time_0">00:00</string>
    <string name="check_in">Time In</string>
    <string name="check_out">Time Out</string>
    <string name="nissi">NISSI ENGINEERING SOLUTION Pvt. Ltd.</string>
    <string name="date_0">DD-MM-YYYY</string>
    <string name="check_in_successfully">PUNCHED IN SUCCESSFULLY</string>
    <string name="check_out_successfully">PUNCHED OUT SUCCESSFULLY</string>
    <string name="ok">OK</string>
    <string name="logout">Logout</string>
    <string name="g_h">Guest House</string>
    <string name="guest_house">Guest House</string>
    <string name="nissi_n">   NISSI</string>
    <string name="chennai">Chennai</string>
    <string name="bangalore">Bangalore</string>
    <string name="delhi">Delhi</string>
    <string name="gurgaon">Gurgaon</string>
    <string name="hyderabad">Hyderabad</string>
    <string name="kolkata">Kolkata</string>
    <string name="title_activity_main">Main</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="checked_in_at">Punched-in at " "</string>
    <string name="checked_out_at">Punched-out at " "</string>
    <string name="location">Location</string>
    <string name="unable">Unable to connect. Please try again</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="title_activity_my_location">MyLocation</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_api_key">AIzaSyDig_d8wBXE5f_LZHLN3wA70iIxDbwHbWk</string>
    <string name="valliyur">Valliyur</string>
    <string name="nasik">Nasik</string>
    <string name="check_in_out">Attendance</string>
    <string name="support">Support</string>
    <string name="sos">SOS</string>
    <string name="currently_unavailable">CURRENTLY UNAVAILABLE</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="company_name">NISSI ENGINEERING SOLUTION PRIVATE LIMITED</string>
    <string name="support_c">SUPPORT</string>
    <string name="dear_employee">Dear Employee</string>
    <string name="message">\u0020 \u0020 \u0020 Nissi Attendance app collects your location while check-in and check-out for administrative purpose.</string>
    <string name="accept">Accept</string>
    <string name="dummy_title">Title of the message</string>
    <string name="dummy_message">This is the message given to you</string>
    <string name="author">Author name</string>
    <string name="margin">\u0020*\u0020\u0020*\u0020\u0020*\u0020\u0020*\u0020</string>
    <string name="send_request">Send Request</string>
    <string name="leave">Leave</string>
    <string name="missed_punch">Missed Punch</string>
    <string name="period">Period</string>
    <string name="colan">:</string>
    <string name="duration">Duration</string>
    <string name="dot">.</string>
    <string name="status">Status</string>
    <string name="reason">Reason</string>
    <string name="approval_request">Approval Request</string>
    <string name="add_new_request">Add new request</string>
    <string name="purpose">Purpose</string>
    <string name="leave_type">Leave Type</string>
    <string name="leave_information">Leave Information</string>
    <string name="number_of_days">Number of Days</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="missed_punch_information">Missed Punch Information</string>
    <string name="missed_date">Missed Date</string>
    <string name="working_hours">Working Hours</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="worked_hour">Worked Hour</string>
    <string name="leave_application">Leave Application</string>
    <string name="apply_for_leave">Apply for Leave</string>
    <string name="comp_off_amp_holiday"><![CDATA[Comp-Off & Local Holiday]]></string>
    <string name="request_type">Request Type</string>
    <string name="information">Information</string>
    <string name="request_date">Request Date</string>
    <string name="requested_on">Requested On</string>
    <string name="approver">Approver</string>
    <string name="position">Position</string>
    <string name="department">Department</string>
    <string name="managing_position">Managing Position</string>
    <string name="comp_off">Comp-Off</string>
    <string name="holiday">Local Holiday</string>
    <string name="staff_name">Staff Name</string>
    <string name="punched_info">Punched Information</string>
    <string name="approve_or_reject">Approve or Reject</string>

    <string-array name="type_of">
        <item>Select the Type</item>
        <item>Punching In/Out</item>
        <item>Comp-off</item>
        <item>Local Holiday</item>
    </string-array>

    <string-array name="month_array">
        <item>Select Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="type_array">
        <item>All</item>
        <item>On-Process</item>
        <item>Approved</item>
        <item>Rejected</item>
    </string-array>

    <string name="title_activity_admin_unique_comp_off_holiday">
        Admin_Unique_Comp_Off_Holiday_Activity
    </string>

    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="total_leave_days">Total Leave Days</string>
    <string name="remaining_leave_days">Remaining Leave Days</string>
    <string name="approve_request">Employee Request</string>
    <string name="employee_comp_off_holiday_request">Employee Comp-Off, Local Holiday Request</string>
    <string name="employee_missed_punch_request">Employee Missed Punch Request</string>
    <string name="employee_leave_request">Employee Leave Request</string>
    <string name="leave_request">Leave Request</string>
    <string name="approve_leave">Approve Leave</string>
    <string name="missed_punch_request">Missed Punch Request</string>
    <string name="approve_missed_punch">Approve Missed Punch</string>
    <string name="approve_comp_off_holiday">Approve Comp-Off Holiday</string>
    <string name="comp_off_holiday_request"><![CDATA[Comp-Off & Holiday Request]]></string>
    <string name="human_resources">Human Resources</string>
    <string name="punch_in_out">Punch In/Out</string>
    <string name="local_holiday">Local Holiday</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="worked_period">Worked Period</string>
    <string name="missed_punch_approval">Missed Punch Approval</string>
    <string name="balance_leave_days">Your Balance Leave Days</string>
    <string name="available_days">Available days</string>
    <string name="applied_days">Applied days</string>
    <string name="rejection_reason">Rejection Reason</string>
    <string name="approval_error">Insufficient leave balance at the selected leave type.</string>
    <string name="approval_conf">Approve LOP leave request?</string>
    <string name="send_conf">Send LOP leave request?</string>
    <string name="send">Send</string>
    <string name="all">All</string>
    <string name="punched_in">Punched In</string>
    <string name="punched_out">Punched Out</string>
    <string name="pick_date">Pick Date</string>
    <string name="filter">Filter</string>
    <string name="title_activity_admin_maps">Admin_Maps_Activity</string>
    <string name="punched_location">Punched Location</string>
    <string name="punched_history">Punched History</string>
    <string name="title_activity_unique_location">Unique_Location_Activity</string>
    <string name="select_all">Select All</string>
    <string name="de_select_all">De-select All</string>
    <string name="night_shift">Night Shift</string>
    <string name="type">Type</string>
    <string name="approve_night_shift">Approve Night Shift</string>
    <string name="night_shift_request">Night Shift Request</string>
    <string name="half_day">Half Day</string>
    <string name="half_day_on">Half Day On</string>
    <string name="settings">Settings</string>
    <string name="notification_manager">Notification Manager</string>
    <string name="punch_in_out_reminder">Punch In/Out Reminder</string>
    <string name="punch_in_reminder">Punch In Reminder</string>
    <string name="punch_out_reminder">Punch Out Reminder</string>
    <string name="_00_00_am">00:00 am</string>
    <string name="guest_house_capacity">Guest House Capacity</string>
    <string name="guest_house_population">Guest House Population</string>
    <string name="guest_house_availability">Guest House Availability</string>
    <string name="permission_management">Permission Management</string>
    <string name="update">Update</string>

</resources>