<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuicon"
        android:title=""
        app:showAsAction="ifRoom"
        android:icon="@drawable/vector_menu"
        android:iconTint="?attr/colorOnSecondary"
        >

        <menu>

            <item
                android:id="@+id/item_logout"
                android:icon="@drawable/vector_logout"
                android:orderInCategory="100"
                android:title="@string/logout"
                app:showAsAction="never"
                android:iconTint="?attr/colorOnSecondary" />

            <item
                android:id="@+id/item_settings"
                android:icon="@drawable/vector_settings"
                android:orderInCategory="50"
                android:title="@string/settings"
                app:showAsAction="never"
                android:iconTint="?attr/colorOnSecondary" />

            <item
                android:id="@+id/item_guest_house_location"
                android:title="@string/guest_house"
                app:showAsAction="never"
                android:orderInCategory="1"
                android:icon="@drawable/vector_location"
                android:iconTint="?attr/colorOnSecondary" />

        </menu>

    </item>

</menu>