<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dialog"
    android:backgroundTint="@color/white"
    android:padding="@dimen/_15sdp"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unable"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="@dimen/_12sdp"
            android:id="@+id/text"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/text"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center">

            <Button
                android:id="@+id/reconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry"
                android:textColor="@color/white" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:backgroundTint="@color/red"
                android:id="@+id/exit"
                android:layout_marginStart="@dimen/_20sdp"
                android:textColor="@color/white"/>

        </LinearLayout>


    </RelativeLayout>



</RelativeLayout>